[project]
name = "toyota"
description = "Toyota Connected Services EU community integration for Home Assistant"
license = "MIT"
version = "v2.4.0"
authors = [
  { name = "CM000n", email = "simon.hoerrle@gmail.com" },
  { name = "deejay1", email = "deejay1@srem.org" },
]
requires-python = '>=3.13.2,<3.15'
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false
requires-poetry = '>=2.0'

[tool.poetry.dependencies]
arrow = "^1.3"
homeassistant = "^2025.4.0"
pytoyoda = "^5.1.0"

[tool.poetry.group.dev.dependencies]
homeassistant-stubs = "^2025.4"
pre-commit = "^4.1"
voluptuous-stubs = "^0.1"
pytest = "^8.3.5"
pytest-asyncio = "^1.0.0"
pytest-homeassistant-custom-component = "^0.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
fix = true
extend-exclude = ["tests"]
lint.select = ["ALL"]
# TRY003: raising HomeAssistantError with a user-facing message is the HA idiom;
# subclassing an exception per message (the rule's "fix") is inappropriate here.
lint.extend-ignore = ["D203", "D213", "COM812", "TRY003"]
lint.pydocstyle.convention = "google"
format.docstring-code-format = true
